--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,71 @@ body{
   background: url('https://images6.alphacoders.com/542/542776.jpg');
   /* background-size: 1536px 850px; */
   background-position-x: -100px;
-  background-position-y: -260px;
+  background-position-y: -220px;
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   color: #fff;
+}
+
+.footer{
+  background-color: gray;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.made-by{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 230px;
+}
+
+.logo{
+  width: 45px;
+  height: 45px;
+}
+
+.logo img{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.socmed-icons{
+  width: 230px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+a{
+  text-decoration: none;
+  color: #fff;
+}
+
+.socmed-icons i{
+  cursor: pointer;
+  transition: all .2s ease-in-out;
+}
+
+.fa-github:hover{
+  color: #171515;
+}
+
+.fa-linkedin:hover{
+  color: #0e76a8;
+}
+.fa-dribbble:hover{
+  color: #ea4c89;
 }
 
 .levels-section{
